# piquantmag

./: .coveragerc  .eslintrc.js  .gitignore  .ruby-gemset  .travis.yml  Pipfile  README.md  config.rb  package-lock.json  package.json  pyproject.toml  webpack.config.js  zappa_settings.json
about/: urls.py  views.py
assets/javascript/: Authorer.vue  app.js  authoring.js
assets/stylesheets/: _layout.scss  _media-queries.scss  _settings.scss  _spacing.scss  _typography.scss  _utils.scss  site.scss
communication/: apps.py  urls.py  views.py
configuration/: feeds.py  settings.py  sitemaps.py  storages.py  urls.py  wsgi.py
configuration/tests/: test_feeds.py  test_sitemaps.py
landing/: urls.py  views.py
styleguide/: apps.py  urls.py  views.py
styleguide/tests/: test_views.py
templates/: 404.html  500.html  __base.html  __base_amp.html  __base_error_page.html  __base_no_google_analytics.html  __i_favicons.html  __i_footer.html  __i_google_analytics.html  __i_nav.html  browserconfig.xml  manifest.json  robots.txt  service-worker.js
templates/error_pages/: __base.html
templates/feeds/: issue.html
tests/: test_context_processors.py
zine/: component_renderers.py  factories.py  models.py  serializers.py  urls.py  views.py
zine/admin/: __init__.py  article.py  author.py  issue.py
zine/migrations/: 0001_all.py  0001_initial.py  0002_add_image_caption.py  0002_authoring.py  0002_auto_20180114_1314.py  0003_allow_issue_fields_to_be_blank.py  0003_change_manager_names.py  0004_articlepreview.py  0004_make_authors_optional.py  0005_fake_the_uuid.py  (+3 more)
(+48 files in other folders)
