[tool.poetry]
name = "piquantmag"
description = "Piquant Magazine"
version = "1.0.0"
authors = ["daneah <github@danehillard.com"]

[tool.poetry.dependencies]
python = "^3.6.5"
boto3 = "*"
django = "3.2.24"
django-webpack-loader = "*"
django-markupfield = "*"
django-ordered-model = "2.1.0"
django-storages = "*"
markdown = "*"
mysqlclient = "1.3.12"
pillow = "*"
rollbar = "*"
zappa = "0.48.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
django-debug-toolbar = "*"
flake8 = "^3.7.9"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[tool.black]
line_length = 120
target-version = ["py36", "py37", "py38"]

[tool.coverage.run]
source = [
    ".",
]

omit = [
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/*",
    "*/test_*",
    "manage.py",
    "configuration/*",
    "*/admin.py",
    "*/apps.py",
    "*/urls.py",
    "sitemaps.py",
]

branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
